[project]
name = "memlayer"
version = "0.1.0"
description = "An MCP server for memlayer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memlayer"]
